--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -10,7 +10,7 @@
     {
 <p>
     Esta aplicacion no tiene actualmente un servicio de correo registrado, mira <a href="https://aka.ms/aspaccountconf">este documento</a> para saber como configurar un servicio de correo real.
-    Normamnlmente esto se enviaria por correo: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click aqui para confirmar.</a>
+    Normalmente esto se enviaria por correo: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click aqui para confirmar.</a>
 </p>
     }
     else
