--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Cliente
 
 @{
-    ViewData["Title"] = "Editar";
+    //ViewData["Title"] = "Editar";
+    Layout = null;
 }
 
 <h1>Editar</h1>
@@ -60,9 +61,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
