--- a/Views/Costos/Details.cshtml
+++ b/Views/Costos/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Costo
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -30,7 +31,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.CostoID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
