--- a/Views/ProbDiagSoles/Edit.cshtml
+++ b/Views/ProbDiagSoles/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ProbDiagSol
 
 @{
-    ViewData["Title"] = "Editar";
+    //ViewData["Title"] = "Editar";
+    Layout = null;
 }
 
 <h1>Editar</h1>
@@ -40,9 +41,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
