--- a/Views/RankingSoles/Index.cshtml
+++ b/Views/RankingSoles/Index.cshtml
@@ -7,35 +7,38 @@
 <h1>Ranking Soluciones</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingSoles")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Total)
+                @Html.DisplayNameFor(model => model.DiagxSol.Solucion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DiagxSol)
+                @Html.DisplayNameFor(model => model.Total)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DiagxSol.DiagxSolID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RankingSolID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.RankingSolID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.RankingSolID">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DiagxSol.Solucion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Total)
+                </td>
+                <td>
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","RankingSoles")/@item.RankingSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","RankingSoles")/@item.RankingSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","RankingSoles")/@item.RankingSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<partial name="_modalview" />
