--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Cliente
 
 @{
-    ViewData["Title"] = "Crear";
+    //ViewData["Title"] = "Crear";
+    Layout = null;
 }
 
 <h1>Crear</h1>
@@ -47,11 +48,6 @@
                 <input asp-for="Comentario" class="form-control" />
                 <span asp-validation-for="Comentario" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Status" /> @Html.DisplayNameFor(model => model.Status)
-                </label>
-            </div>
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
@@ -59,9 +55,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
