--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Cliente
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -63,7 +64,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ClienteID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" />
+        @*<a asp-action="Index">Volver</a>*@
     </form>
 </div>
