--- a/Views/Clientes/Details.cshtml
+++ b/Views/Clientes/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Cliente
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -60,7 +61,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.ClienteID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
