--- a/Views/Costos/Index.cshtml
+++ b/Views/Costos/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Costos</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","Costos")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Solucion)
             </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -37,11 +37,13 @@
                 @Html.DisplayFor(modelItem => item.Solucion.Descripcion)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CostoID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.CostoID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.CostoID">Eliminar</a>
+                <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","Costos")/@item.CostoID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","Costos")/@item.CostoID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","Costos")/@item.CostoID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<partial name="_modalview" />
