--- a/Views/Diagnosticos/Details.cshtml
+++ b/Views/Diagnosticos/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -18,7 +19,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.DiagnosticoID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
