--- a/Views/DiagxSoles/Create.cshtml
+++ b/Views/DiagxSoles/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.DiagxSol
 
 @{
-    ViewData["Title"] = "Crear";
+    //ViewData["Title"] = "Crear";
+    Layout = null;
 }
 
 <h1>Crear</h1>
@@ -13,11 +14,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DiagnosticoID" class="control-label"></label>
+                <label asp-for="DiagnosticoID" class="control-label">Diagnostico</label>
                 <select asp-for="DiagnosticoID" class ="form-control" asp-items="ViewBag.DiagnosticoID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SolucionID" class="control-label"></label>
+                <label asp-for="SolucionID" class="control-label">Solucion</label>
                 <select asp-for="SolucionID" class ="form-control" asp-items="ViewBag.SolucionID"></select>
             </div>
             <div class="form-group">
@@ -27,9 +28,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
