--- a/Views/DiagxSoles/Delete.cshtml
+++ b/Views/DiagxSoles/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.DiagxSol
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -15,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Diagnostico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostico.DiagnosticoID)
+            @Html.DisplayFor(model => model.Diagnostico.Descripcion)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Solucion)
@@ -27,7 +28,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="DiagxSolID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Back to List</a>*@
     </form>
 </div>
