--- a/Views/DiagxSoles/Details.cshtml
+++ b/Views/DiagxSoles/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.DiagxSol
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -14,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Diagnostico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostico.DiagnosticoID)
+            @Html.DisplayFor(model => model.Diagnostico.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Solucion)
@@ -24,7 +25,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.DiagxSolID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
