--- a/Views/DiagxSoles/Edit.cshtml
+++ b/Views/DiagxSoles/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.DiagxSol
 
 @{
-    ViewData["Title"] = "Editar";
+    //ViewData["Title"] = "Editar";
+    Layout = null;
 }
 
 <h1>Editar</h1>
@@ -14,12 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="DiagxSolID" />
             <div class="form-group">
-                <label asp-for="DiagnosticoID" class="control-label"></label>
+                <label asp-for="DiagnosticoID" class="control-label">Diagnostico</label>
                 <select asp-for="DiagnosticoID" class="form-control" asp-items="ViewBag.DiagnosticoID"></select>
                 <span asp-validation-for="DiagnosticoID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SolucionID" class="control-label"></label>
+                <label asp-for="SolucionID" class="control-label">Solucion</label>
                 <select asp-for="SolucionID" class="form-control" asp-items="ViewBag.SolucionID"></select>
                 <span asp-validation-for="SolucionID" class="text-danger"></span>
             </div>
@@ -30,9 +31,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
