--- a/Views/DiagxSoles/Index.cshtml
+++ b/Views/DiagxSoles/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Diagnosticos x Soluciones</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","DiagxSoles")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -18,24 +18,27 @@
             <th>
                 @Html.DisplayNameFor(model => model.Solucion)
             </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Diagnostico.DiagnosticoID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Solucion.Descripcion)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DiagxSolID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.DiagxSolID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.DiagxSolID">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Diagnostico.Descripcion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Solucion.Descripcion)
+                </td>
+                <td>
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","DiagxSoles")/@item.DiagxSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","DiagxSoles")/@item.DiagxSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","DiagxSoles")/@item.DiagxSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<partial name="_modalview" />
