--- a/Views/Equipos/Delete.cshtml
+++ b/Views/Equipos/Delete.cshtml
@@ -22,13 +22,13 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.ClienteID)
+            @Html.DisplayFor(model => model.Cliente.ApellidoNombre)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoriaEquipo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoriaEquipo.CategoriaEquipoID)
+            @Html.DisplayFor(model => model.CategoriaEquipo.Categoria)
         </dd class>
     </dl>
     
