--- a/Views/Equipos/Edit.cshtml
+++ b/Views/Equipos/Edit.cshtml
@@ -15,12 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EquipoID" />
             <div class="form-group">
-                <label asp-for="ClienteID" class="control-label"></label>
+                <label asp-for="ClienteID" class="control-label">Cliente</label>
                 <select asp-for="ClienteID" class="form-control" asp-items="ViewBag.ClienteID"></select>
                 <span asp-validation-for="ClienteID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoriaEquipoID" class="control-label"></label>
+                <label asp-for="CategoriaEquipoID" class="control-label">Categoria</label>
                 <select asp-for="CategoriaEquipoID" class="form-control" asp-items="ViewBag.CategoriaEquipoID"></select>
                 <span asp-validation-for="CategoriaEquipoID" class="text-danger"></span>
             </div>
