--- a/Views/ProbDiagSoles/Create.cshtml
+++ b/Views/ProbDiagSoles/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ProbDiagSol
 
 @{
-    ViewData["Title"] = "Crear";
+    //ViewData["Title"] = "Crear";
+    Layout = null;
 }
 
 <h1>Crear</h1>
@@ -17,15 +18,15 @@
                 <select asp-for="ServicioID" class ="form-control" asp-items="ViewBag.ServicioID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProblemaID" class="control-label"></label>
+                <label asp-for="ProblemaID" class="control-label">Problema</label>
                 <select asp-for="ProblemaID" class ="form-control" asp-items="ViewBag.ProblemaID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="DiagnosticoID" class="control-label"></label>
+                <label asp-for="DiagnosticoID" class="control-label">Diagnostico</label>
                 <select asp-for="DiagnosticoID" class ="form-control" asp-items="ViewBag.DiagnosticoID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SolucionID" class="control-label"></label>
+                <label asp-for="SolucionID" class="control-label">Solucion</label>
                 <select asp-for="SolucionID" class ="form-control" asp-items="ViewBag.SolucionID"></select>
             </div>
             <div class="form-group">
@@ -35,9 +36,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
