--- a/Views/ProbDiagSoles/Delete.cshtml
+++ b/Views/ProbDiagSoles/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ProbDiagSol
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -21,13 +22,13 @@
             @Html.DisplayNameFor(model => model.Problema)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Problema.ProblemaID)
+            @Html.DisplayFor(model => model.Problema.Descripcion)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Diagnostico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostico.DiagnosticoID)
+            @Html.DisplayFor(model => model.Diagnostico.Descripcion)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Solucion)
@@ -39,7 +40,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProbDiagSolID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Volver</a>*@
     </form>
 </div>
