--- a/Views/ProbDiagSoles/Details.cshtml
+++ b/Views/ProbDiagSoles/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ProbDiagSol
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -20,13 +21,13 @@
             @Html.DisplayNameFor(model => model.Problema)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Problema.ProblemaID)
+            @Html.DisplayFor(model => model.Problema.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Diagnostico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostico.DiagnosticoID)
+            @Html.DisplayFor(model => model.Diagnostico.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Solucion)
@@ -36,7 +37,7 @@
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.ProbDiagSolID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
