--- a/Views/ProbDiagSoles/Index.cshtml
+++ b/Views/ProbDiagSoles/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Problemas - Diagnosticos - Soluciones</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","ProbDIagSoles")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -24,30 +24,33 @@
             <th>
                 @Html.DisplayNameFor(model => model.Solucion)
             </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Servicio.ServicioID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Problema.ProblemaID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Diagnostico.DiagnosticoID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Solucion.Descripcion)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProbDiagSolID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.ProbDiagSolID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProbDiagSolID">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Servicio.ServicioID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Problema.ProblemaID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Diagnostico.DiagnosticoID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Solucion.Descripcion)
+                </td>
+                <td>
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","ProbDIagSoles")/@item.ProbDiagSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","ProbDIagSoles")/@item.ProbDiagSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","ProbDIagSoles")/@item.ProbDiagSolID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<partial name="_modalview" />
