--- a/Views/ProbxDiags/Delete.cshtml
+++ b/Views/ProbxDiags/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ProbxDiag
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -15,19 +16,19 @@
             @Html.DisplayNameFor(model => model.Problema)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Problema.ProblemaID)
+            @Html.DisplayFor(model => model.Problema.Descripcion)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Diagnostico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostico.DiagnosticoID)
+            @Html.DisplayFor(model => model.Diagnostico.Descripcion)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProbxDiagID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Volver</a>*@
     </form>
 </div>
