--- a/Views/ProbxDiags/Index.cshtml
+++ b/Views/ProbxDiags/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Problema x Diagnostico</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","ProbxDiags")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -22,20 +22,23 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Problema.ProblemaID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Diagnostico.DiagnosticoID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProbxDiagID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.ProbxDiagID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProbxDiagID">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Problema.ProblemaID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Diagnostico.Descripcion)
+                </td>
+                <td>
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","ProbxDiags")/@item.ProbxDiagID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","ProbxDiags")/@item.ProbxDiagID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","ProbxDiags")/@item.ProbxDiagID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<partial name="_modalview" />
