--- a/Views/RankingClientess/Create.cshtml
+++ b/Views/RankingClientess/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.RankingClientes
 
 @{
-    ViewData["Title"] = "Crear";
+    //ViewData["Title"] = "Crear";
+    Layout = null;
 }
 
 <h1>Crear</h1>
@@ -13,7 +14,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ClienteID" class="control-label"></label>
+                <label asp-for="ClienteID" class="control-label">Cliente</label>
                 <select asp-for="ClienteID" class ="form-control" asp-items="ViewBag.ClienteID"></select>
             </div>
             <div class="form-group">
@@ -28,9 +29,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
