--- a/Views/RankingClientess/Details.cshtml
+++ b/Views/RankingClientess/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.RankingClientes
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -11,20 +12,20 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Cliente)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Cliente.ApellidoNombre)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TotalServicios)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TotalServicios)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cliente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.ClienteID)
-        </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.RankingClientesID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
