--- a/Views/RankingDiags/Delete.cshtml
+++ b/Views/RankingDiags/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.RankingDiag
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -12,22 +13,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProbxDiag.Diagnostico)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProbxDiag.Diagnostico)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Total)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Total)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProbxDiag)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProbxDiag.ProbxDiagID)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="RankingDiagID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Volver</a>*@
     </form>
 </div>
