--- a/Views/RankingUsuarios/Create.cshtml
+++ b/Views/RankingUsuarios/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.RankingUsuario
 
 @{
-    ViewData["Title"] = "Crear";
+    //ViewData["Title"] = "Crear";
+    Layout = null;
 }
 
 <h1>Crear</h1>
@@ -38,9 +39,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
