--- a/Views/RankingUsuarios/Index.cshtml
+++ b/Views/RankingUsuarios/Index.cshtml
@@ -7,11 +7,14 @@
 <h1>Ranking Usuarios</h1>
 
 <p>
-    <a asp-action="Create">Nuevo</a>
+    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Create","RankingUsuarios")' class="btnLoadModal btn btn-outline-primary" data-toggle="modal" data-target="#modalPersnalizado"><span><i class="bi-plus-circle-fill"></i></span> Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Usuario)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.EnProceso)
             </th>
@@ -21,33 +24,33 @@
             <th>
                 @Html.DisplayNameFor(model => model.Fallados)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnProceso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Solucionados)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fallados)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RankingUsuarioID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.RankingUsuarioID">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.RankingUsuarioID">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EnProceso)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Solucionados)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fallados)
+                </td>
+                <td>
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Edit","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-pencil-fill text-primary"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Details","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-eye-fill text-info"></i></a> |
+                    <a href="#modalPersnalizado" data-id='@Url.ActionLink("Delete","RankingUsuarios")/@item.RankingUsuarioID' class="btnLoadModal" data-toggle="modal" data-target="#modalPersnalizado"><i class="bi-trash-fill text-danger"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<partial name="_modalview" />
