--- a/Views/Servicios/Delete.cshtml
+++ b/Views/Servicios/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.Servicio
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -57,7 +58,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ServicioID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Volver</a>*@
     </form>
 </div>
