--- a/Views/ServxUsuarios/Delete.cshtml
+++ b/Views/ServxUsuarios/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ServxUsuario
 
 @{
-    ViewData["Title"] = "Eliminar";
+    //ViewData["Title"] = "Eliminar";
+    Layout = null;
 }
 
 <h1>Eliminar</h1>
@@ -21,19 +22,19 @@
             @Html.DisplayNameFor(model => model.Servicio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Servicio.ServicioID)
+            @Html.DisplayFor(model => model.Servicio.Cliente.ApellidoNombre)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Id)
+            @Html.DisplayFor(model => model.Usuario.UserName)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ServcUsuarioID" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> @*|
+        <a asp-action="Index">Volver</a>*@
     </form>
 </div>
