--- a/Views/ServxUsuarios/Details.cshtml
+++ b/Views/ServxUsuarios/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ServiceMVC.Models.ServxUsuario
 
 @{
-    ViewData["Title"] = "Detalles";
+    //ViewData["Title"] = "Detalles";
+    Layout = null;
 }
 
 <h1>Detalles</h1>
@@ -20,17 +21,17 @@
             @Html.DisplayNameFor(model => model.Servicio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Servicio.ServicioID)
+            @Html.DisplayFor(model => model.Servicio.Cliente.ApellidoNombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Id)
+            @Html.DisplayFor(model => model.Usuario.UserName)
         </dd>
     </dl>
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.ServcUsuarioID">Editar</a> |
     <a asp-action="Index">Volver</a>
-</div>
+</div>*@
