--- a/Views/Shared/_MainMenu.cshtml
+++ b/Views/Shared/_MainMenu.cshtml
@@ -46,7 +46,13 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ArancelTiempos" asp-action="Index">Arancel TIempo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserRoles" asp-action="Index">Roles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Administrar Roles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ArancelTiempos" asp-action="Index">Arancel Tiempo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ArancelUnidades" asp-action="Index">Arancel Unidades</a>
