--- a/Views/Servicios/Create.cshtml
+++ b/Views/Servicios/Create.cshtml
@@ -30,8 +30,12 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-controller="Servicios">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (cliente != null)
+            {
+            <input type="hidden" asp-for="ClienteID" value="@cliente.ClienteID" />
+            }
             <div class="form-group">
                 <label asp-for="EquipoID" class="control-label">Equipo</label>
                 <select asp-for="EquipoID" class="form-control" asp-items="ViewBag.EquipoID"></select>
@@ -43,30 +47,30 @@
                 <span asp-validation-for="FechaIng" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="FechaEgr" class="control-label"></label>
-                <input asp-for="FechaEgr" class="form-control" />
-                <span asp-validation-for="FechaEgr" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TiempoTrabajo" class="control-label"></label>
-                <input asp-for="TiempoTrabajo" class="form-control" />
-                <span asp-validation-for="TiempoTrabajo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UnidadesTrabajo" class="control-label"></label>
-                <input asp-for="UnidadesTrabajo" class="form-control" />
-                <span asp-validation-for="UnidadesTrabajo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Solucionado" /> @Html.DisplayNameFor(model => model.Solucionado)
-                </label>
-            </div>*@
+            <label asp-for="FechaEgr" class="control-label"></label>
+            <input asp-for="FechaEgr" class="form-control" />
+            <span asp-validation-for="FechaEgr" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="TiempoTrabajo" class="control-label"></label>
+            <input asp-for="TiempoTrabajo" class="form-control" />
+            <span asp-validation-for="TiempoTrabajo" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UnidadesTrabajo" class="control-label"></label>
+            <input asp-for="UnidadesTrabajo" class="form-control" />
+            <span asp-validation-for="UnidadesTrabajo" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Total" class="control-label"></label>
+            <input asp-for="Total" class="form-control" />
+            <span asp-validation-for="Total" class="text-danger"></span>
+        </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" asp-for="Solucionado" /> @Html.DisplayNameFor(model => model.Solucionado)
+            </label>
+        </div>*@
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
